# ship2

./: .gitignore  CORE_GUIDE.md  GUIDE.md  RAMP_GUIDE.md  README.md
.github/workflows/: ci.yml
backend/: pyproject.toml
backend/edge_boot_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
frontend/: package-lock.json  package.json
